@@ -28,6 +28,7 @@ val hash_obj(val);
 val make_hash(val weak_keys, val weak_vals);
 val *gethash_l(val hash, val key, val *new_p);
 val gethash(val hash, val key);
+val sethash(val hash, val key, val value);
 val remhash(val hash, val key);
 void hash_process_weak(void);
 
